fix: Fix disabled styling in dark mode

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,11 +18,6 @@
   width: 300px;
 }
 
-.side-nav a.disabled {
-  color: #ccc;
-  background-color: transparent;
-}
-
 .sidenav-content {
   padding: 8px;
 }
