--- a/src/app/resource-table/filters/filter-catalog/filter-catalog.component.scss
+++ b/src/app/resource-table/filters/filter-catalog/filter-catalog.component.scss
@@ -19,8 +19,3 @@
 ::ng-deep .filter-catalog .mat-expansion-panel-header {
   padding-left: 16px;
 }
-
-.disabled {
-  color: #ccc;
-  background-color: transparent;
-}
